Added heading, paragraph and list elements

--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
 		<title>This is a test</title>
 	</head>
 	<body>
+	<div>
+		<h1>This is an amazing page</h1>
+		<p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. 
+		<br>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. </p>
+		<p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
 
+		<ul>
+			<li>Number one</li>
+			<li>Number two</li>
+			<li>Number three</li>
+		</ul>
+
+		<ol>
+			<li>Number one</li>
+			<li>Number two</li>
+			<li>Number three</li>
+		</ol>
+		
+	</div>
 	</body>
 </html>
