--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 	<body>
 	<div>
 		<h1>This is an amazing page</h1>
+		<!-- This is starts an article -->
 		<p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. 
 		<br>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. </p>
 		<p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
-
+		<!-- This ends an article -->
 		<ul>
 			<li>Number one</li>
 			<li>Number two</li>
@@ -21,7 +22,7 @@
 			<li>Number two</li>
 			<li>Number three</li>
 		</ol>
-		
+
 	</div>
 	</body>
 </html>
