--- a/index.html
+++ b/index.html
@@ -4,12 +4,65 @@
 		<title>This is a test</title>
 	</head>
 	<body>
+		<style type="text/css">
+		/*element {
+
+		}*/
+		
+		div {
+			width: 50%;
+			float: left;
+		}
+
+		/*float is the gravity of an element. left -- stuck to the left. */
+
+		h1 {
+			color: blue;
+		}
+		p {
+			margin-top: 50px;
+			font-style: none;
+		}
+		p, ul, ol {
+			color: green;
+		}
+
+		img {
+			width: 90%;
+			/*not full 100% because of the body padding. use % or px. use em for text*/
+		}
+
+		#heading {
+			font-size: 50px;
+			/*attribute at the end wins if conflicting. id denoted by # hashtag*/
+		}
+
+		.paragraph {
+			font-style: italic;
+			/*classes are denoted by . period*/
+		}
+
+		p.paragraph.introduction.featured {
+			/*so specific that it is more powerful*/
+			padding-left: 20px;
+		}
+
+		div ul li {
+			background-color: red;
+		}
+
+		div ol li {
+			background-color: blue;
+		}
+
+		</style>
 	<div>
-		<h1>This is an amazing page</h1>
+		<h1 id="heading">This is an amazing page</h1> 
+		<!-- id is unique to that element on the page. a class is something you can assign to a lot of elements (identifier for a type of thing, apples are the same but not the same apple) -->
 		<!-- This is starts an article -->
-		<p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. 
+		<p class="paragraph introduction featured">This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. 
 		<br>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. </p>
-		<p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
+		<p class="paragraph">This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
 		<!-- This ends an article -->
 		<ul>
 			<li>Number one</li>
