Imported the css file and added some Js

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>This is a test</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<!-- link TAB. moved to head to load the css file and then show the content of the file -->
 	</head>
 	<body>
 
@@ -29,5 +31,9 @@
 	<div>
 		<img src="sunflower.jpg">
 	</div>
+	<script type="text/javascript">
+		// script on the bottom that pulls commands on above
+		console.log ("Hello, I am executed on this page")
+	</script>
 	</body>
 </html>
