Moved js to js file

--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
 	<div>
 		<img src="sunflower.jpg">
 	</div>
-	<script type="text/javascript">
-		// script on the bottom that pulls commands on above
-		console.log ("Hello, I am executed on this page")
-	</script>
+	<script type="text/javascript" src="javascript.js"></script>
+	<!-- script is a source, css is a link -->
 	</body>
 </html>
